cluster/apps/gaming/minecraft/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
  labels:
    istio-injection: enabled
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: baseline
