cluster/apps/gaming/minecraft/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-bungeecord-to-minecraft"
  namespace: minecraft
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: minecraft
            app.kubernetes.io/name: bungeecord
      toPorts:
        - ports:
            - port: '25565'
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-world-to-bungeecord"
  namespace: minecraft
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: bungeecord
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: '25577'
              protocol: TCP
